Fixed flex to d-md-flex which helped the cards stack appropriately on mobile

--- a/Develop/team.html
+++ b/Develop/team.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,7 +8,7 @@
     <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Assets/style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
@@ -18,64 +16,89 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">My Team</h1>
+                <h1 class="text-center">Terbo Team</h1>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
-                
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">bobby</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:Mike@">Mike@</a></li>
-            <li class="list-group-item">Office number: dsag</li>
-        </ul>
-    </div>
-</div>
+            <div class="team-area col-12 d-md-flex justify-content-center">
 
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title" id="engineer-name">agasd</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item" id="engineer-id">ID: asdf</li>
-            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:gasd">gasd</a></li>
-            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/asdfa"
-                    target="_blank" rel="noopener noreferrer">asdfa</a></li>
-        </ul>
-    </div>
-</div>
+                <div class="card employee-card">
+                    <div class="card-header">
+                        <h2 class="card-title">Mike</h2>
+                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">ID: m</li>
+                            <li class="list-group-item">Email: <a href="mailto:m">m</a></li>
+                            <li class="list-group-item">Office number: m</li>
+                        </ul>
+                    </div>
+                </div>
 
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">gasd</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: asdfa</li>
-            <li class="list-group-item">Email: <a href="mailto:agag">agag</a></li>
-            <li class="list-group-item">School: asdg</li>
-        </ul>
-    </div>
-</div>
+                <div class="card employee-card">
+                    <div class="card-header">
+                        <h2 class="card-title" id="engineer-name">Chad</h2>
+                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item" id="engineer-id">ID: c</li>
+                            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:c">c</a></li>
+                            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/c"
+                                    target="_blank" rel="noopener noreferrer">c</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card employee-card">
+                    <div class="card-header">
+                        <h2 class="card-title" id="engineer-name">Jones</h2>
+                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item" id="engineer-id">ID: j</li>
+                            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:j">j</a></li>
+                            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/j"
+                                    target="_blank" rel="noopener noreferrer">j</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card employee-card">
+                    <div class="card-header">
+                        <h2 class="card-title" id="engineer-name">Debbi</h2>
+                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item" id="engineer-id">ID: d</li>
+                            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:d">d</a></li>
+                            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/d"
+                                    target="_blank" rel="noopener noreferrer">d</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="card employee-card">
+                    <div class="card-header">
+                        <h2 class="card-title">Marco</h2>
+                        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">ID: m</li>
+                            <li class="list-group-item">Email: <a href="mailto:m">m</a></li>
+                            <li class="list-group-item">School: m</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </body>
 
 </html>
-
-
-
-
-        
