--- a/Develop/team.html
+++ b/Develop/team.html
@@ -28,73 +28,73 @@
                 
 <div class="card employee-card shadow-sm bg-white rounded">
     <div class="card-header">
-        <h2 class="card-title">Mike</h2>
+        <h2 class="card-title">Tommy</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:mike@">mike@</a></li>
-            <li class="list-group-item">Office number: 910-100-1000</li>
+            <li class="list-group-item">Email: <a href="mailto:tom@zmail.com">tom@zmail.com</a></li>
+            <li class="list-group-item">Office number: 919-800-8000</li>
         </ul>
     </div>
 </div>
 
 <div class="card employee-card shadow-sm bg-white rounded">
     <div class="card-header">
-        <h2 class="card-title" id="engineer-name">Lucas</h2>
+        <h2 class="card-title" id="engineer-name">Charles</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item" id="engineer-id">ID: 2</li>
-            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:lucas@">lucas@</a></li>
-            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/lucadinosaur"
-                    target="_blank" rel="noopener noreferrer">lucadinosaur</a></li>
+            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:charles@zmail.com">charles@zmail.com</a></li>
+            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/charleszzz"
+                    target="_blank" rel="noopener noreferrer">charleszzz</a></li>
         </ul>
     </div>
 </div>
 
 <div class="card employee-card shadow-sm bg-white rounded">
     <div class="card-header">
-        <h2 class="card-title" id="engineer-name">Thomas</h2>
+        <h2 class="card-title" id="engineer-name">Yoda</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item" id="engineer-id">ID: 3</li>
-            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:thomas@">thomas@</a></li>
-            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/thomthetrain"
-                    target="_blank" rel="noopener noreferrer">thomthetrain</a></li>
+            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:yoda@zmail.com">yoda@zmail.com</a></li>
+            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/yodadaaaa"
+                    target="_blank" rel="noopener noreferrer">yodadaaaa</a></li>
         </ul>
     </div>
 </div>
 
 <div class="card employee-card shadow-sm bg-white rounded">
     <div class="card-header">
-        <h2 class="card-title" id="engineer-name">Rebecca</h2>
+        <h2 class="card-title" id="engineer-name">Robby Zenabi</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item" id="engineer-id">ID: 4</li>
-            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:reb@">reb@</a></li>
-            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/rebzeb"
-                    target="_blank" rel="noopener noreferrer">rebzeb</a></li>
+            <li class="list-group-item" id="engineer-email">Email: <a href="mailto:robybobbytobby@zmail.com">robybobbytobby@zmail.com</a></li>
+            <li class="list-group-item" id="engineer-github">GitHub: <a href="https://github.com/robbalobba"
+                    target="_blank" rel="noopener noreferrer">robbalobba</a></li>
         </ul>
     </div>
 </div>
 
 <div class="card employee-card shadow-sm bg-white rounded">
     <div class="card-header">
-        <h2 class="card-title">Lelo</h2>
+        <h2 class="card-title">Chad</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:lelo@">lelo@</a></li>
-            <li class="list-group-item">School: UNC</li>
+            <li class="list-group-item">Email: <a href="mailto:chadwickvonawesome@zmail.com">chadwickvonawesome@zmail.com</a></li>
+            <li class="list-group-item">School: Harvardddd</li>
         </ul>
     </div>
 </div>
